--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <p>
 
   <div id="cert1" style="display:none;">
-    <p><u>আবেদনকারীর অংশ</u></p>
+    <p style="text-align: center;"><u>আবেদনকারীর অংশ</u></p>
     <p style="line-height: 2px;">বরাবর,</p>
     <p style="line-height: 2px;">উপজেলা সমাজসেবা অফিসার,</p>
     <p style="line-height: 2px;">দিঘলিয়া, খুলনা।</p>
@@ -74,9 +74,11 @@
     <p style="text-indent: 40px; text-align: justify;"> বিনীত নিবেদন এই যে, আমি <b><span id="showName1"></span></b>, 
     মাতা: <b><span id="showMother"></span></b>, পিতা/স্বামী: <b><span id="showFather"></span></b>, 
     জাতীয় পরিচয়পত্র/জন্ম নিবন্ধন নম্বর নং:<b><span id="showNid"></span></b>। ইউনিয়নের নামঃ <b><span id="showUnion"></span></b>, ওয়ার্ড নম্বরঃ <b><span id="showWord"></span></b>। 
-    আমি আপনার উপজেলা সমাজসেবা অফিসের আওতাভুক্ত একজন <b><span id="showBhata"></span></b> ভাতাভোগাী। আমি আমার নিজ নামে সিম নিবন্ধন না থাকার,কারণে পূর্বে ব্যবহৃত মোবাইল,
-    মোবাইল হিসাব নম্বর <b><span id="showOnumber"></span></b> এর পরিবর্তে বর্তমান মোবাইল নম্বর (বাংলায়) <b><span id="showPnumber1"></span></b>, (ইংরাজীতে)<b><span id="showPnumber2"></span></b> নগদ/বিকাশ হিসাব খুলে এমআইএস এ সংযুক্ত করার জন্য অনুরোধ জানাচ্ছি।
-    <p>সংযুক্ত জাতীয় পরিচয়পত্র/জন্ম নিবন্ধনের ফটোকপি।</p>
+    আমি আপনার উপজেলা সমাজসেবা অফিসের আওতাভুক্ত একজন <b><span id="showBhata"></span></b> ভাতাভোগাী। আমি আমার নিজ নামে সিম নিবন্ধন না থাকার,কারণে পূর্বে ব্যবহৃত মোবাইল
+    হিসাব নম্বর <b><span id="showOnumber"></span></b> এর পরিবর্তে বর্তমান মোবাইল নম্বর (বাংলায়) <b><span id="showPnumber1"></span></b>, (ইংরাজীতে) <b><span id="showPnumber2"></span></b> এমএফএস (মোবাইল ব্যাংকিং) সেবা <u><b>নগদ</b> / <b>বিকাশ</b></u> অথবা ব্যাংক একাউন্ট হিসাব...................................... খুলে এমআইএস এ সংযুক্ত করার জন্য অনুরোধ জানাচ্ছি।
+    <p>সংযুক্তঃ</p>
+      <p style="line-height: 2px;">১। জাতীয় পরিচয়পত্র/জন্ম নিবন্ধনের ফটোকপি।</p>
+      <p style="line-height: 2px;">২। ভাতভোগীর সদ্য তোলা পাসপোর্ট সাইজের রঙ্গিন ছবি ০১টি।</p>
     
     <p style="text-indent: 70%;">আবেদনকারীর স্বাক্ষর/টিপসহি,</p>
     <br><br>
@@ -84,13 +86,13 @@
     <p> <u><b>সমাজসেবা অফিসের অংশ</b></u><p>
     <p> অফিস রেকর্ড অনুযায়ী বর্নিত আবেদনকারীর(উপকারভোগাী) তথ্য সঠিক পাওয়া যায়। তার এমআইএস </p>
     <p>নম্বর.......................................................।</p>
-    <p>আবেদনকৃত মোবাইল নম্বরে নগদ/বিকাশ হিসাব খোলার জন্য সুপারিশ করছি।</p>
+    <p style="line-height: 2px;">আবেদনকৃত মোবাইল নম্বরে নগদ/বিকাশ হিসাব খোলার জন্য সুপারিশ করছি।</p>
+    <br>
     <p>সনাক্তকারি ইউনিয়ন সমাজকর্মী/ কারিগরি প্রশিক্ষকে স্বাক্ষর ও সীল</p>
-    <br><br>
-    <p style="text-indent: 60%; line-height: 5px;">সমাজসেবা অফিসারের স্বাক্ষর ও সীল</p>
+    <br>
+    <p style="text-indent: 40%; line-height: 5px;">সমাজসেবা অফিসারের স্বাক্ষর ও সীল..........................</p>
 
-    <p>..................</p>
-    <p style="line-height: 2px;">প্রতিনিধি</p>
+   <p style="line-height: 2px;">প্রতিনিধি</p>
     <p style="line-height: 2px;">নগদ/বিকাশ</p>
     <p style="line-height: 2px;">..................</p>
 
