--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <p> <u><b>সমাজসেবা অফিসের অংশ</b></u><p>
     <p> অফিস রেকর্ড অনুযায়ী বর্নিত আবেদনকারীর(উপকারভোগাী) তথ্য সঠিক পাওয়া যায়। তার এমআইএস </p>
     <p>নম্বর.......................................................।</p>
-    <p style="line-height: 2px;">আবেদনকৃত মোবাইল নম্বরে নগদ/বিকাশ হিসাব খোলার জন্য সুপারিশ করছি।</p>
+    <p style="line-height: 2px;">আবেদনকৃত মোবাইল নম্বরে নগদ হিসাব খোলার জন্য সুপারিশ করছি।</p>
     <br>
     <p>সনাক্তকারি ইউনিয়ন সমাজকর্মী/ কারিগরি প্রশিক্ষকে স্বাক্ষর ও সীল</p>
     <br>
@@ -112,3 +112,4 @@
   <script src="index.js"></script>
 </body>
 </html>
+
