--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     মাতা: <b><span id="showMother"></span></b>, পিতা/স্বামী: <b><span id="showFather"></span></b>, 
     জাতীয় পরিচয়পত্র/জন্ম নিবন্ধন নম্বর নং:<b><span id="showNid"></span></b>। ইউনিয়নের নামঃ <b><span id="showUnion"></span></b>, ওয়ার্ড নম্বরঃ <b><span id="showWord"></span></b>। 
     আমি আপনার উপজেলা সমাজসেবা অফিসের আওতাভুক্ত একজন <b><span id="showBhata"></span></b> ভাতাভোগাী। আমি আমার নিজ নামে সিম নিবন্ধন না থাকার,কারণে পূর্বে ব্যবহৃত মোবাইল
-    হিসাব নম্বর <b><span id="showOnumber"></span></b> এর পরিবর্তে বর্তমান মোবাইল নম্বর (বাংলায়) <b><span id="showPnumber1"></span></b>, (ইংরাজীতে) <b><span id="showPnumber2"></span></b> এমএফএস (মোবাইল ব্যাংকিং) সেবা <u><b>নগদ</b> / <b>বিকাশ</b></u> অথবা ব্যাংক একাউন্ট হিসাব...................................... খুলে এমআইএস এ সংযুক্ত করার জন্য অনুরোধ জানাচ্ছি।
+    হিসাব নম্বর <b><span id="showOnumber"></span></b> এর পরিবর্তে বর্তমান মোবাইল নম্বর (বাংলায়) <b><span id="showPnumber1"></span></b>, (ইংরাজীতে) <b><span id="showPnumber2"></span></b> এমএফএস (মোবাইল ব্যাংকিং) সেবা <u><b>নগদ</b></u> অথবা ব্যাংক একাউন্ট হিসাব...................................... খুলে এমআইএস এ সংযুক্ত করার জন্য অনুরোধ জানাচ্ছি।
     <p>সংযুক্তঃ</p>
       <p style="line-height: 2px;">১। জাতীয় পরিচয়পত্র/জন্ম নিবন্ধনের ফটোকপি।</p>
       <p style="line-height: 2px;">২। ভাতভোগীর সদ্য তোলা পাসপোর্ট সাইজের রঙ্গিন ছবি ০১টি।</p>
@@ -112,4 +112,5 @@
   <script src="index.js"></script>
 </body>
 </html>
+
 
